# metacritic-games-1995-2021

./: game_reviews.ipynb  pyproject.toml
