[tool.poetry]
name = "metacritic-games-1995-2021"
version = "0.1.0"
description = ""
authors = ["L-Carlos <luiscarlosfirminopinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
